--- a/resource-storage-wrapper/resource-storage-sdk/pom.xml
+++ b/resource-storage-wrapper/resource-storage-sdk/pom.xml
@@ -3,22 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>resource-storage-root</artifactId>
+        <artifactId>resource-storage-wrapper</artifactId>
         <groupId>cn.x5456</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>resource-storage-wrapper</artifactId>
+    <groupId>cn.x5456</groupId>
+    <artifactId>resource-storage-sdk</artifactId>
     <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>resource-storage-server</module>
-        <module>resource-storage-sdk</module>
+        <module>resource-storage-gateway</module>
     </modules>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
 </project>
