fix：pom文件改造,抽取公共部分

--- a/resource-storage-wrapper/pom.xml
+++ b/resource-storage-wrapper/pom.xml
@@ -21,4 +21,27 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>normal</id>
+            <properties>
+                <profile.active>normal</profile.active>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>eureka</id>
+            <properties>
+                <profile.active>eureka</profile.active>
+            </properties>
+        </profile>
+        <profile>
+            <id>nacos</id>
+            <properties>
+                <profile.active>nacos</profile.active>
+            </properties>
+        </profile>
+    </profiles>
 </project>
