实现清理策略

--- a/resource-storage-starter/rs-mongo-starter/pom.xml
+++ b/resource-storage-starter/rs-mongo-starter/pom.xml
@@ -21,6 +21,11 @@
             <groupId>cn.x5456</groupId>
             <artifactId>mongo</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
