--- a/resource-storage-impl/mongo/pom.xml
+++ b/resource-storage-impl/mongo/pom.xml
@@ -35,6 +35,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
