--- a/resource-storage-wrapper/resource-storage-server/pom.xml
+++ b/resource-storage-wrapper/resource-storage-server/pom.xml
@@ -36,6 +36,10 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
