feat: 增加本地文件缓存清理功能

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <jetbrains.annotations.version>1.7.0</jetbrains.annotations.version>
         <swagger.version>3.0.0</swagger.version>
         <swagger.annotations.version>1.5.20</swagger.annotations.version>
+        <oshi.version>5.6.1</oshi.version>
+        <jna.version>5.5.0</jna.version>
     </properties>
 
     <dependencyManagement>
@@ -87,6 +89,11 @@
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger.annotations.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.oshi</groupId>
+                <artifactId>oshi-core</artifactId>
+                <version>${oshi.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
