--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <swagger.annotations.version>1.5.20</swagger.annotations.version>
         <oshi.version>5.6.1</oshi.version>
         <jna.version>5.5.0</jna.version>
+        <nacos.version>2.2.2.RELEASE</nacos.version>
     </properties>
 
     <dependencyManagement>
@@ -94,6 +95,16 @@
                 <groupId>com.github.oshi</groupId>
                 <artifactId>oshi-core</artifactId>
                 <version>${oshi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+                <version>${nacos.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+                <version>${nacos.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
