--- a/resource-storage-wrapper/pom.xml
+++ b/resource-storage-wrapper/pom.xml
@@ -26,6 +26,12 @@
             <id>normal</id>
             <properties>
                 <profile.active>normal</profile.active>
+                <nacos.config.enabled>false</nacos.config.enabled>
+                <nacos.discovery.enabled>false</nacos.discovery.enabled>
+                <nacos.host.port>127.0.0.1:8848</nacos.host.port>
+                <nacos.namespace>rs</nacos.namespace>
+                <nacos.file_extension>yaml</nacos.file_extension>
+                <nacos.file_name>application-nacos</nacos.file_name>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -35,12 +41,25 @@
             <id>eureka</id>
             <properties>
                 <profile.active>eureka</profile.active>
+                <nacos.config.enabled>false</nacos.config.enabled>
+                <nacos.discovery.enabled>false</nacos.discovery.enabled>
+                <nacos.host.port>127.0.0.1:8848</nacos.host.port>
+                <nacos.namespace>rs</nacos.namespace>
+                <nacos.file_extension>yaml</nacos.file_extension>
+                <nacos.file_name>application-nacos</nacos.file_name>
             </properties>
         </profile>
         <profile>
             <id>nacos</id>
             <properties>
                 <profile.active>nacos</profile.active>
+                <!-- Nacos 配置服务 -->
+                <nacos.config.enabled>true</nacos.config.enabled>
+                <nacos.discovery.enabled>true</nacos.discovery.enabled>
+                <nacos.host.port>127.0.0.1:8848</nacos.host.port>
+                <nacos.namespace>rs</nacos.namespace>
+                <nacos.file_extension>yaml</nacos.file_extension>
+                <nacos.file_name>application-nacos</nacos.file_name>
             </properties>
         </profile>
     </profiles>
