--- a/resource-storage-wrapper/resource-storage-sdk/resource-storage-gateway/pom.xml
+++ b/resource-storage-wrapper/resource-storage-sdk/resource-storage-gateway/pom.xml
@@ -52,6 +52,15 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -74,7 +83,7 @@
                 <!--引入所需环境的配置文件-->
                 <filtering>true</filtering>
                 <includes>
-                    <include>application.yml</include>
+                    <include>bootstrap.yml</include>
                     <include>application-${profile.active}.yml</include>
                 </includes>
             </resource>
