--- a/resource-storage-wrapper/resource-storage-sdk/resource-storage-gateway/src/main/resources/application-nacos.yml
+++ b/resource-storage-wrapper/resource-storage-sdk/resource-storage-gateway/src/main/resources/application-nacos.yml
@@ -6,11 +6,8 @@ spring:
     gateway:
       routes:
         - id: rs-service
-#          uri: lb://服务名
-          uri: http://127.0.0.1:8080
+          uri: lb://rs-server
+#          uri: http://127.0.0.1:8080
           predicates:
             - Path=/rest/rs/**
           filters:
-eureka:
-  client:
-    enabled: false
