--- a/resource-storage-wrapper/resource-storage-server/pom.xml
+++ b/resource-storage-wrapper/resource-storage-server/pom.xml
@@ -113,15 +113,32 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <id>nacos</id>
+            <properties>
+                <profile.active>nacos</profile.active>
+                <!-- Nacos 配置服务 -->
+                <nacos.config.enabled>false</nacos.config.enabled>
+                <nacos.discovery.enabled>true</nacos.discovery.enabled>
+                <nacos.host.port>127.0.0.1:8848</nacos.host.port>
+                <nacos.namespace>rs</nacos.namespace>
+                <nacos.file_extension>yaml</nacos.file_extension>
+                <nacos.file_name>application-nacos</nacos.file_name>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
     </profiles>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
