--- a/resource-storage-wrapper/pom.xml
+++ b/resource-storage-wrapper/pom.xml
@@ -31,5 +31,26 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
+        <profile>
+            <id>nacos</id>
+            <properties>
+                <profile.active>nacos</profile.active>
+                <!-- Nacos 配置服务 -->
+                <nacos.config.enabled>true</nacos.config.enabled>
+                <nacos.discovery.enabled>true</nacos.discovery.enabled>
+                <nacos.host.port>127.0.0.1:8848</nacos.host.port>
+                <nacos.namespace>rs</nacos.namespace>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
     </profiles>
 </project>
