--- a/resource-storage-wrapper/resource-storage-sdk/pom.xml
+++ b/resource-storage-wrapper/resource-storage-sdk/pom.xml
@@ -15,6 +15,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>resource-storage-gateway</module>
+        <module>resource-storage-webclient-sdk</module>
     </modules>
 
 
