feat: 对接口的返回值进行封装

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
                 <artifactId>mongo</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>cn.x5456</groupId>
+                <artifactId>resource-storage-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- 公司依赖-->
 <!--            <dependency>-->
