--- a/resource-storage-wrapper/pom.xml
+++ b/resource-storage-wrapper/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>resource-storage-server</module>
         <module>resource-storage-sdk</module>
+        <module>resource-storage-common</module>
     </modules>
 
     <properties>
