--- a/resource-storage-wrapper/resource-storage-server/src/main/resources/application-normal.yml
+++ b/resource-storage-wrapper/resource-storage-server/src/main/resources/application-normal.yml
@@ -1,6 +1,6 @@
-spring:
-  data:
-    mongodb:
-      host: 47.100.88.162
-      port: 27017
-      database: test
+#spring:
+#  data:
+#    mongodb:
+#      host: 47.100.88.162
+#      port: 27017
+#      database: test
