--- a/resource-storage-wrapper/resource-storage-sdk/resource-storage-webclient-sdk/src/test/resources/bootstrap.yml
+++ b/resource-storage-wrapper/resource-storage-sdk/resource-storage-webclient-sdk/src/test/resources/bootstrap.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: rs-webclient
-  profiles:
-    active: @profile.active@
+  cloud:
+    nacos:
+      discovery:
+        enabled: true
+        server-addr: '127.0.0.1:8848'
+        namespace: 'rs'
 
