doc: 添加 swagger 注释

--- a/resource-storage-api/pom.xml
+++ b/resource-storage-api/pom.xml
@@ -22,6 +22,11 @@
             <groupId>cn.x5456</groupId>
             <artifactId>infrastructure</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
