fix: 关闭 rs-server 向注册中心注册

--- a/resource-storage-wrapper/resource-storage-server/src/main/resources/application-prod.yml
+++ b/resource-storage-wrapper/resource-storage-server/src/main/resources/application-prod.yml
@@ -4,3 +4,7 @@ spring:
       host: 47.100.88.162
       port: 27017
       database: test
+  cloud:
+    nacos:
+      discovery:
+        enabled: false
