--- a/resource-storage-wrapper/resource-storage-server/src/main/resources/application-dev.yml
+++ b/resource-storage-wrapper/resource-storage-server/src/main/resources/application-dev.yml
@@ -1,6 +1,10 @@
-#spring:
-#  data:
-#    mongodb:
-#      host: 47.100.88.162
-#      port: 27017
-#      database: test
+spring:
+  data:
+    mongodb:
+      host: 127.0.0.1
+      port: 27017
+      database: test
+  cloud:
+    nacos:
+      discovery:
+        enabled: false
